<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!--Menu -->
    <string name="logout">Logout</string>
    <!--Welcome Screen -->
    <string name="welcome">Welcome!</string>
    <string name="live_your_perfect">LIVE YOUR\n PERFECT</string>
    <string name="btn_next">Next</string>
    <string name="instructions_your_items">Add button to add new list shoes item\n\n Save Button to save the shoe to your inventory</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_item">To add new shoe item</string>
    <string name="enter_email">Plese Enter email and pass to Login</string>
</resources>